# llvm-prepo

./: .gitignore  README.md  README.txt  merged_maggie_changes.patch
include/llvm/: InitializePasses.h  LinkAllPasses.h
lib/AsmParser/: LLParser.cpp
lib/CodeGen/: TargetLoweringObjectFileImpl.cpp
lib/IR/: AsmWriter.cpp  CMakeLists.txt  DataLayout.cpp  Digest.cpp  LLVMContext.cpp  LLVMContextImpl.h  LegacyPassManager.cpp  MDBuilder.cpp  RepoGlobals.cpp  RepoHashCalculator.cpp  RepoTicket.cpp  Verifier.cpp
lib/MC/: CMakeLists.txt  MCAsmBackend.cpp  MCAsmInfoRepo.cpp  MCContext.cpp  MCDwarf.cpp  MCObjectFileInfo.cpp  MCRepoObjectTargetWriter.cpp  MCRepoStreamer.cpp  MCRepoTicketFile.cpp  MCSectionRepo.cpp  RepoObjectWriter.cpp
lib/MC/MCParser/: AsmParser.cpp
lib/MC/MCRepoFragment/: MCRepoFragment.cpp
lib/Support/: Triple.cpp
test/Assembler/: ProgramRepositoryPrunning.ll  TicketNode.ll  invalid-ticketnode-comdat.ll  invalid-ticketnode-linkage-zero.ll  invalid-ticketnode-linkage.ll  missing_repo_tickets.ll  repo-global-object-missing-tickets.ll  repo-missing-tickets.ll  repo-pruned-field.ll  repo-prunning-dependents.ll  repo-prunning.ll  repo-ticket-node.ll
test/Feature/: repo_common.ll  repo_constant_function_diff_hash.ll  repo_constant_function_same_hash.ll  repo_notickets.ll  repo_symbol_with_prefix.ll  repo_tickets.ll
test/Other/: opt-O0-pipeline.ll  opt-O2-pipeline.ll  opt-O3-pipeline.ll  opt-Os-pipeline.ll  pass-pipelines.ll
test/Verifier/: module-repo-tickets.ll
tools/opt/: opt.cpp
tools/repo-ticket-dump/: CMakeLists.txt  RepoTicketDump.cpp
tools/repo2obj/: CMakeLists.txt  R2OELFOutputSection.cpp  R2OELFOutputSection.h  R2OELFSectionType.cpp  R2OELFSectionType.h  R2OELFStringTable.cpp  R2OELFStringTable.h  R2OELFSymbolTable.h  ReadMe.md  WriteHelpers.cpp  WriteHelpers.h  repo2obj.cpp
unittests/IR/: CMakeLists.txt  MetadataTest.cpp  RepoModuleHashTest.cpp  RepoTicketMDTest.cpp  VerifierTest.cpp
unittests/MC/: CMakeLists.txt  RepoAligned.cpp  RepoFragment.cpp  RepoSparseArray.cpp
(+102 files in other folders)
